k8s/contour/ingress/ecshop.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: ecshop-ingress
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: ecshop.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: ecshop-svcn2
      port: 8008
