k8s/contour/ingress/git.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: git-http-ingress
  namespace: private
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: git.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: gitlab
      port: 80
