k8s/contour/ingress/grafana.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: grafana.baway.org.cn        
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: grafana
      port: 3000
